add support for unique working dir
- allows multiple script runners to be run concurrently
- add some additional safe guard checks
- improve readme
- move JFR logs to logs directory